; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvdimm/extr_region_devs.c_nd_region_interleave_set_altcookie.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvdimm/extr_region_devs.c_nd_region_interleave_set_altcookie.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nd_region = type { %struct.nd_interleave_set* }
%struct.nd_interleave_set = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nd_region_interleave_set_altcookie(%struct.nd_region* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.nd_region*, align 8
  %4 = alloca %struct.nd_interleave_set*, align 8
  store %struct.nd_region* %0, %struct.nd_region** %3, align 8
  %5 = load %struct.nd_region*, %struct.nd_region** %3, align 8
  %6 = getelementptr inbounds %struct.nd_region, %struct.nd_region* %5, i32 0, i32 0
  %7 = load %struct.nd_interleave_set*, %struct.nd_interleave_set** %6, align 8
  store %struct.nd_interleave_set* %7, %struct.nd_interleave_set** %4, align 8
  %8 = load %struct.nd_interleave_set*, %struct.nd_interleave_set** %4, align 8
  %9 = icmp ne %struct.nd_interleave_set* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load %struct.nd_interleave_set*, %struct.nd_interleave_set** %4, align 8
  %12 = getelementptr inbounds %struct.nd_interleave_set, %struct.nd_interleave_set* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %2, align 4
  br label %15

14:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %14, %10
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
